+added: community button --> links to FITS +fixed: error when loading variable that has just been assigned in the same node. --> textDisplay~@name=Mike~Oh, your name is {@name}! --> results to: Oh, your name is Mike! --> if: textDisplay~@name=getInput()~Oh, your name is {@name}! --> results to: Oh, your name is getInput()! --> This is because getInput() is called only after the user moves to the next node by pressing the next button; And therefore, its value has not yet been changed.

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -18,6 +18,10 @@
 	style="@style/UsbongMainMenuButton"
     android:text="@string/about" />
 
+	<Button android:id="@+id/community_button"
+	style="@style/UsbongMainMenuButton"
+    android:text="@string/community" />
+	
 	<Button android:id="@+id/settings_button"
 	style="@style/UsbongMainMenuButton"
     android:text="@string/settings" />
