--- a/res/layout/singleitemview.xml
+++ b/res/layout/singleitemview.xml
@@ -12,6 +12,12 @@
     android:orientation="vertical"
     android:id="@+id/layout" >
     
+		<com.google.android.youtube.player.YouTubePlayerView
+          android:id="@+id/youtube_view"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginBottom="30dp" />
+		
 	   <LinearLayout
 	       android:layout_width="match_parent"
 	       android:layout_height="wrap_content"
@@ -22,7 +28,8 @@
 		    android:id="@+id/icon"
 		    android:layout_width="match_parent"
 		    android:layout_height="match_parent"
-		    android:scaleType="centerCrop" />
+		    android:scaleType="centerCrop"
+		    android:visibility="gone" />
 	           	
 	       <RelativeLayout
 	           android:layout_width="match_parent"
@@ -87,28 +94,5 @@
 	           android:layout_height="wrap_content" />
 			
 	   </LinearLayout>
-			<com.google.android.youtube.player.YouTubePlayerView
-                android:id="@+id/youtube_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp" />
-	   <!-- FrameLayout
-	       android:layout_width="match_parent"
-	       android:layout_height="match_parent" >
-
-	       <ImageView
-	           android:id="@+id/thumbnail"
-	           android:layout_width="match_parent"
-	           android:layout_height="match_parent"
-				android:contentDescription="@string/desc" />
-
-	       <ImageButton
-	           android:id="@+id/playImage"
-	           android:background="@drawable/playbutton"
-	           android:layout_width="match_parent"
-	           android:layout_height="match_parent"
-	           android:scaleType="fitXY"
-				android:contentDescription="@string/desc" />
-	   </FrameLayout --> 
 	</LinearLayout>
 </ScrollView>
