--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -2,19 +2,33 @@
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
     <style name="AppBaseTheme" parent="Theme.AppCompat.Light">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
+            backward-compatibility can go here.
         -->
     </style>
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+    </style>
+
+    <style name="ThemeHoloWithActionBar" parent="Theme.AppCompat.Light">
+        <item name="android:actionBarTabStyle">@style/Base.Widget.AppCompat.ActionBar</item>
+        <item name="android:actionBarSize">40dp</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:padding">0px</item>
+    </style>
+
+    <style name="ActionBarTabStyle" parent="@android:style/Widget.ActionBar">
+        <item name="android:minHeight">40dp</item>
+        <item name="android:height">40dp</item>
     </style>
 
 </resources>
