--- a/res/layout/screenshot_fragment_layout.xml
+++ b/res/layout/screenshot_fragment_layout.xml
@@ -6,21 +6,22 @@
 
     <FrameLayout
         android:id="@+id/imageCapturePreview"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
         <ImageView
             android:id="@+id/screenshot"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
+            android:scaleType="fitXY"
             android:src="@drawable/usbong_icon" />
 
         <ImageButton
             android:id="@+id/playVideoButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:background="@null"
