--- a/res/layout/singleitemviewwithfragment.xml
+++ b/res/layout/singleitemviewwithfragment.xml
@@ -19,7 +19,8 @@
             android:id="@+id/screenshotsViewPager"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:layout_weight="4" >
+            android:layout_weight="4"
+            android:padding="5dp" >
         	</android.support.v4.view.ViewPager>
 
         <!-- fragment
