--- a/res/menu/speak_and_set_language_menu.xml
+++ b/res/menu/speak_and_set_language_menu.xml
@@ -1,4 +1,5 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:usbong="http://schemas.android.com/apk/res-auto">
 	<item android:id="@+id/speak"
 		  android:title="Speak"
 	/>
