--- a/res/layout/registration_screen.xml
+++ b/res/layout/registration_screen.xml
@@ -9,36 +9,61 @@
         style="@style/UsbongLoginEditText"
         android:id="@+id/reg_first_name"
         android:hint="First name"
+        android:background="@drawable/rect_text_edit"
+        android:textColorHint="#9a9898"
+        android:padding="5dp"        
+        android:layout_marginTop="5dp"        
 	/>
 	<EditText
         style="@style/UsbongLoginEditText"
         android:id="@+id/reg_last_name"
         android:hint="Last name"
+        android:background="@drawable/rect_text_edit"
+        android:textColorHint="#9a9898"
+        android:padding="5dp"        
+        android:layout_marginTop="5dp"        
 	/>
 	<EditText
         style="@style/UsbongLoginEditText"
         android:id="@+id/reg_email"
        	android:hint="Email"
+        android:background="@drawable/rect_text_edit"
+        android:textColorHint="#9a9898"
+        android:padding="5dp"        
+        android:layout_marginTop="5dp"        
 	/>
 	<EditText
         style="@style/UsbongLoginEditText"
         android:id="@+id/reg_username"
        	android:hint="Username"
+        android:background="@drawable/rect_text_edit"
+        android:textColorHint="#9a9898"
+        android:padding="5dp"                
+        android:layout_marginTop="5dp"        
 	/>
 	<EditText
         style="@style/UsbongLoginEditText"
         android:inputType="textPassword"
         android:id="@+id/reg_password"
         android:hint="Password"
+        android:background="@drawable/rect_text_edit"
+        android:textColorHint="#9a9898"
+        android:padding="5dp"        
+        android:layout_marginTop="5dp"        
 	/>
 	<EditText
         style="@style/UsbongLoginEditText"
         android:inputType="textPassword"
         android:id="@+id/reg_password_confirm"
         android:hint="Confirm Password"
+        android:background="@drawable/rect_text_edit"
+        android:textColorHint="#9a9898"
+        android:padding="5dp"        
+        android:layout_marginTop="5dp"        
 	/>
 	
 	<Button
+	    android:layout_marginTop="5dp"
         style="@style/UsbongDefaultButton"
         android:text="Register"
         android:id="@+id/register_button"
