--- a/res/menu/speak_and_set_language_menu.xml
+++ b/res/menu/speak_and_set_language_menu.xml
@@ -6,4 +6,7 @@
 	<item android:id="@+id/set_language"
 		  android:title="Set Language"
 	/>	
+	<item android:id="@+id/settings"
+		  android:title="Settings"
+	/>		
 </menu>
