--- a/res/values/usbongStyle.xml
+++ b/res/values/usbongStyle.xml
@@ -261,6 +261,7 @@
 		<item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">#000000</item>
         <item name="android:textSize">32dp</item>
+        <item name="android:background">@drawable/rect_text_edit</item>        
     </style>	       
     
     <style name="UsbongTextAreaEditText">
@@ -271,7 +272,8 @@
         <item name="android:lines">8</item>
         <item name="android:gravity">top|left</item>
 		<item name="android:scrollHorizontally">false</item>        
-    </style>	       
+        <item name="android:background">@drawable/rect_text_edit</item>        		
+</style>	       
         
     <style name="UsbongDefaultBackNextButtonLayout">
 		<item name="android:layout_width">fill_parent</item>
