--- a/res/menu/speak_and_set_language_menu.xml
+++ b/res/menu/speak_and_set_language_menu.xml
@@ -9,4 +9,7 @@
 	<item android:id="@+id/settings"
 		  android:title="Settings"
 	/>		
+	<item android:id="@+id/about"
+		  android:title="About"
+	/>			
 </menu>
