--- a/res/layout/textarea_screen.xml
+++ b/res/layout/textarea_screen.xml
@@ -3,18 +3,19 @@
 	style="@style/UsbongEditTextFieldParentLayout"
 	android:id="@+id/parent_layout_id"       	
 	>
-	
-		<TextView android:id="@+id/textarea_textview"
-		    style="@style/UsbongDefaultTextView"	    	
-		    android:text="@string/default_textview" 
-	    	android:layout_marginTop="16px"/>
-		/>	
-		    
-		<EditText android:id="@+id/textarea_edittext"
-			style="@style/UsbongTextAreaEditText"	
-		    android:layout_alignParentBottom="true"
-		/>
-		
+	<ScrollView style="@style/UsbongDefaultScrollView"
+	>		 	
+		<LinearLayout style="@style/UsbongDefaultMainLayout">    	
+			<TextView android:id="@+id/textarea_textview"
+			    style="@style/UsbongDefaultTextView"	    	
+			    android:text="@string/default_textview" 
+		    	android:layout_marginTop="16px"/>	    
+			<EditText android:id="@+id/textarea_edittext"
+				style="@style/UsbongTextAreaEditText"	
+			    android:layout_alignParentBottom="true"
+			/>
+		</LinearLayout>
+	</ScrollView>	    	    				
 	<LinearLayout
 		style="@style/UsbongDefaultBackNextButtonLayout">	
 	    <Button android:id="@+id/back_button"
