--- a/res/layout/textfield_screen.xml
+++ b/res/layout/textfield_screen.xml
@@ -3,15 +3,19 @@
 	style="@style/UsbongEditTextFieldParentLayout"
 	android:id="@+id/parent_layout_id"       	
 	>
-	
-		<TextView android:id="@+id/textfield_textview"
-		    style="@style/UsbongDefaultTextView"	    	
-		    android:text="@string/default_textview" 
-	    	/>
-		    
-		<EditText android:id="@+id/textfield_edittext"
-			style="@style/UsbongDefaultEditText"	
-		/>
+	<ScrollView style="@style/UsbongDefaultScrollView"
+	>		 	
+		<LinearLayout style="@style/UsbongDefaultMainLayout">
+			<TextView android:id="@+id/textfield_textview"
+			    style="@style/UsbongDefaultTextView"	    	
+			    android:text="@string/default_textview" 
+		    	/>
+			    
+			<EditText android:id="@+id/textfield_edittext"
+				style="@style/UsbongDefaultEditText"	
+			/>
+		</LinearLayout>
+	</ScrollView>	    	    	
 	<LinearLayout
 		style="@style/UsbongDefaultBackNextButtonLayout">	
 	    <Button android:id="@+id/back_button"
