--- a/res/layout/textfield_with_unit_screen.xml
+++ b/res/layout/textfield_with_unit_screen.xml
@@ -3,19 +3,22 @@
 	style="@style/UsbongEditTextFieldParentLayout"
 	android:id="@+id/parent_layout_id"       	
 	>
-	
-		<TextView android:id="@+id/textfield_textview"
-		    style="@style/UsbongDefaultTextView"	    	
-		    android:text="@string/default_textview" 
-		/>	
-			    
-		<EditText android:id="@+id/textfield_edittext"
-			style="@style/UsbongDefaultEditText"	
-		/>
-				
-		<TextView android:id="@+id/textfieldunit_textview"
-		    style="@style/UsbongDefaultTextView"	    	
-		    android:text=""/>
+	<ScrollView style="@style/UsbongDefaultScrollView"
+	>		 	
+		<LinearLayout style="@style/UsbongDefaultMainLayout">    
+			<TextView android:id="@+id/textfield_textview"
+			    style="@style/UsbongDefaultTextView"	    	
+			    android:text="@string/default_textview" 
+			/>	
+				    
+			<EditText android:id="@+id/textfield_edittext"
+				style="@style/UsbongDefaultEditText"	
+			/>					
+			<TextView android:id="@+id/textfieldunit_textview"
+			    style="@style/UsbongDefaultTextView"	    	
+			    android:text=""/>
+		</LinearLayout>
+	</ScrollView>	    	    							
 	<LinearLayout
 		style="@style/UsbongDefaultBackNextButtonLayout">	
 	    <Button android:id="@+id/back_button"
