+fixed: transparent calendar background --> made it dark, so that the font color (which is light) can be seen.

--- a/res/layout/date_screen.xml
+++ b/res/layout/date_screen.xml
@@ -18,6 +18,7 @@
          android:layout_height="wrap_content" 
          android:calendarViewShown="false"
          style="@style/DatePickerTheme"
+         android:background="#282828"
          >
     	</DatePicker>
 	</LinearLayout>
